# 42sh_fork

./: AUTHORS  CMakeLists.txt  README  TODO  compile_no_configure.sh  compile_to_asm.sh  configure.sh
doc/: 42sh.1  doxy
src/: 42sh.c  execute.c  execute.h  execute2.c  execute3.c  hash_table.c  hash_table.h  lexer.c  lexer.h  main.c  main.h  my_string.c  my_string.h  option_parser.c  option_parser.h  options.c  options.h  parser.c  parser.h  parser.h.h  rules.c  rules.h  rules2.c  rules3.c  rules4.c  rules5.c  rules6.c  tree.c  tree.h  vector.c  vector.h
src/execute/: CMakeLists.txt  builtins.c  builtins.h  builtins2.c  builtins3.c  builtins_c.c  execute.c  execute.h  execute2.c  execute3.c  pipeline.c  redirection.c  shell_cmd.c  shell_cmd2.c
src/expansion/: CMakeLists.txt  arithmetic.c  arithmetic.h  arithmetic_functions.c  expansion.c  expansion.h  expansion2.c  stack.c  stack.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  tokenize.c  tokenize.h
src/main/: CMakeLists.txt  main.c  main.h  main2.c
src/option_parser/: CMakeLists.txt  option_parser.c  option_parser.h
src/parser/: CMakeLists.txt  parser.c  parser.h
src/rules/: CMakeLists.txt  rules.c  rules.h  rules2.c  rules3.c  rules4.c  rules5.c  rules6.c
src/signals/: CMakeLists.txt  signals.c  signals.h
src/typer/: .typer.c.swp  CMakeLists.txt  typer.c  typer.h
src/util/: CMakeLists.txt  hash_table.c  hash_table.h  my_malloc.c  my_malloc.h  my_math.c  my_math.h  my_string.c  my_string.h  my_string2.c  my_string3.c  str.c  str.h  tree.c  tree.h  vector.c  vector.h  vector2.c
tests/: test.rb
tests/alias_unalias/: test1.t  test2.t  test3.t  test4.t  test5.t  test6.t
tests/arithmetic_expansion/: addi.t  const.t  mult.t  space.t  test6.t  test7.t  test8.t
tests/builtins/: test1.t  test2.t  test3.t  test4.t  test5.t  test6.t  test7.t  test8.t  test9.t  testA.t  testB.t
tests/case/: test1.t  test2.t  test3.t  test4.t  test5.t  test6.t
tests/cmd_substitution/: ls.t
tests/comments/: test1.t  test2.t  test3.t
tests/conditions/: test1.t  test2.t  test3.t  test4.t  test5.t  test6.t  test7.t  test8.t  test9.t  testA.t  testB.t
tests/expansion/: ari_d_quote.t  ari_s_quote.t  assig.t  bad_assig.t  test1.t  test3.t  test4.t  test5.t  various_exp.t  various_exp2.t  various_exp3.t
tests/field_splitting/: test1.t
tests/list/: test1.t  test2.t
tests/logical_ops/: test1.t  test10.t  test11.t  test2.t  test3.t  test4.t  test5.t  test6.t  test7.t  test8.t  test9.t
tests/loops/: test1.t  test2.t  test3.t  test4.t  test5.t
tests/parameter_expansion/: bracket.t  bracket2.t  long_name.t  long_name_digit.t  multiple_exp.t  test2.t
tests/parser/: CS.sh  script.sh  script.t  script2.t  test2.t  test3.t  test4.t  test5.t  test6.t
tests/pipe/: test1.t  test2.t  test3.t
tests/redirections/: test1.t  test2.t  test3.t  test4.t
tests/simple_command/: test.t  test1.t  test2.t  test3.t  test4.t  test5.t  test6.t
tests/source/: test1.t  test2.t  test3.t
tests/test_category/: test.t  test2.t
tests/tilde_expansion/: tilde_d_quote.t  tilde_login.t  tilde_only.t  tilde_s_quote.t  tilde_wrong_login.t
tests/typer/: test1.t  test2.t
